<resources>
    <string name="app_name">MySportClubz</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_users">Users</string>
    <string name="menu_fees_structure">Fees Structure</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_revenue">Revenue</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_events">Events</string>
    <string name="menu_enquiries">Enquiries</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
