<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_users" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_fees_structure" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_payment" />


            <item
                android:id="@+id/nav_revenue"
                android:icon="@drawable/ic_menu_revenue"
                android:title="@string/menu_revenue" />
            <item
                android:id="@+id/nav_expenses"
                android:icon="@drawable/ic_menu_expenses"
                android:title="@string/menu_expenses" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_expenses"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_enquiries"
            android:icon="@drawable/ic_menu_expenses"
            android:title="Enquiries" />
        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_menu_expenses"
            android:title="Members" />
    </group>
</menu>
